--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h4>Welcome !</h4>
-<p>click on item , you wanna enter.</p>
+<div>
+   <h2>Welcome !</h2>
+   <p>Click on the component to get started </p>
+</div>
